# c-stacktrace

./: CMakeLists.txt  LICENSE  README.md  main.c  stacktrace.c  stacktrace.h
testc/: CMakeLists.txt  testc.c
testcpp/: CMakeLists.txt  test.cpp
